--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Note Maker</title>
+		<title>Youtube Video Finder</title>
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="./css/style.css">
